--- a/Firebase/style.css
+++ b/Firebase/style.css
@@ -1,8 +1,53 @@
-
 body {
- background-color: #eeedef;   
+     background-color: #eeedef;
+ font-family: 'Gotham-Medium';   
+    margin: 0px;
+}
+
+header  {
+    
+ background-color: #4977ba;
+    height: 60px;
+    color: #fff;
+    text-align: center;
+    padding-bottom: 10px;
+    padding-top: 10px;
+    font-size: 22pt;
     
 }
+
+nav {
+ display: inline-block;   
+}
+
+.icon {
+ width: 20%;
+}
+
+.text {
+    
+ width:60%;   
+}
+
+
+.filter {
+    
+ background-color: #67c5b5;
+    text-align: center;
+    color: #fff;
+    height: 60px;
+    padding-top: 30px;
+    font-size: 18pt;
+}
+
+.filter em {
+    
+    font-style: normal;
+    border-bottom: 3px solid #fff;
+    padding-bottom: 3px;
+    
+}
+
 
 
 #itemContainer {
@@ -24,9 +69,10 @@ body {
   box-sizing: border-box;
 /*   position: absolute; */
   z-index: 99;
-  -webkit-transition: z-index .5s;
+  -webkit-transition: z-index .2s;
   /* For Safari 3.1 to 6.0 */
-  transition: z-index .5s;
+  transition: z-index .2s;
+    background-color: #fff;
     
 }
 
@@ -44,6 +90,32 @@ body {
 }
 
 
+
+span h1 {
+    font-size: 14pt;
+    padding: 0px 15px 8px 15px;
+    margin: 0px;
+    color: #4977ba;
+    
+}
+
+.freshMeterGreen {
+    
+ position: absolute;
+    top: 0;
+    left: 0;
+    height: 35px;
+    width: 35px;
+    background-color: #67c5b5;
+    display: block;
+}
+
+span p {
+    font-family: "Gotham-Book";
+margin: 0px;
+ padding: 0px 15px 8px 15px; 
+}
+
 .absItem {
   
   position: absolute;
@@ -52,8 +124,9 @@ body {
   left: 0;
   right:0;
   z-index: 90;
-  -webkit-transition: bottom 1s, right 1s, left 1s;
-  transition: bottom 1s, right 1s, left 1s;
+  -webkit-transition: bottom .5s, right .5s, left .5s;
+  transition: bottom .5s, right .5s, left .5s;
+    transition-timing-function: ease;
    
   
 }
@@ -62,23 +135,23 @@ body {
 
 
 .scaleTransLeft {
-  bottom : -30px;
-  right: -30px;
+  bottom : -80px;
+  right: -80px;
 
 }
 
 
 .scaleTransMid {
-  bottom : -30px;
-  right: -15px;
-  left: -15px;
+  bottom : -80px;
+  right: -40px;
+  left: -40px;
 
 }
 
 
 .scaleTransRight {
-  bottom : -30px;
-  left: -30px;
+  bottom : -80px;
+  left: -80px;
 
 }
 
@@ -87,15 +160,42 @@ body {
   
 }
 
-.left {
-  
+.inner {
+    
+ min-height: 200px;
+        background-color: #fff;
 }
 
-.middle {
-  
-  
+
+
+paper-material {
+
 }
 
-.right {
-  
+
+
+
+@font-face {
+    font-family: 'Gotham';
+    src: url('fonts/Gotham-Book.otf')
+    font-weight: normal;
+    font-style: normal;
+
 }
+
+@font-face {
+    font-family: 'Gotham-Medium';
+    src: url('fonts/Gotham-Medium.otf')
+    font-weight: normal;
+    font-style: normal;
+
+}
+
+@font-face {
+    font-family: 'Gotham-Black';
+    src: url('fonts/Gotham-Black.otf')
+    font-weight: normal;
+    font-style: normal;
+
+}
+
